// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 员工花名册 1`] = `
{
  "actions": [
    "add",
    "edit",
  ],
  "columns": [
    {
      "label": "姓名",
      "prop": "name",
    },
    {
      "label": "部门",
      "prop": "department",
    },
    {
      "label": "职位",
      "prop": "position",
    },
    {
      "label": "性别",
      "prop": "gender",
    },
    {
      "label": "年龄",
      "prop": "age",
    },
    {
      "label": "手机号",
      "prop": "phone",
    },
    {
      "label": "状态",
      "prop": "status",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入姓名",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "姓名",
      "prop": "name",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入部门",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "部门",
      "prop": "department",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入职位",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "职位",
      "prop": "position",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "男",
          "value": "male",
        },
        {
          "label": "女",
          "value": "female",
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择性别",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Radio",
      "label": "性别",
      "prop": "gender",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入年龄",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "年龄",
      "prop": "age",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入手机号",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "手机号",
      "prop": "phone",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "姓名",
      "prop": "name",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "部门",
      "prop": "department",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "职位",
      "prop": "position",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 商品管理 1`] = `
{
  "actions": [
    "add",
    "edit",
    "delete",
  ],
  "columns": [
    {
      "label": "商品名称",
      "prop": "productName",
    },
    {
      "label": "分类",
      "prop": "category",
    },
    {
      "label": "状态",
      "prop": "status",
    },
    {
      "label": "名称",
      "prop": "name",
    },
    {
      "label": "价格",
      "prop": "price",
    },
    {
      "label": "库存",
      "prop": "stock",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入商品名称",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "商品名称",
      "prop": "productName",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择分类",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "分类",
      "prop": "category",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入名称",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "名称",
      "prop": "name",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入价格",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "价格",
      "prop": "price",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入库存",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "库存",
      "prop": "stock",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "商品名称",
      "prop": "productName",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formtype": "Select",
      "label": "分类",
      "prop": "category",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 文章管理 1`] = `
{
  "actions": [
    "add",
    "edit",
    "delete",
  ],
  "columns": [
    {
      "label": "标题",
      "prop": "title",
    },
    {
      "label": "分类",
      "prop": "category",
    },
    {
      "label": "状态",
      "prop": "status",
    },
    {
      "label": "创建人",
      "prop": "creator",
    },
    {
      "label": "创建时间",
      "prop": "createTime",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入标题",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "标题",
      "prop": "title",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择分类",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "分类",
      "prop": "category",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入创建人",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "创建人",
      "prop": "creator",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入创建时间",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "创建时间",
      "prop": "createTime",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "标题",
      "prop": "title",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formtype": "Select",
      "label": "分类",
      "prop": "category",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 日志查询 1`] = `
{
  "actions": [
    "view",
  ],
  "columns": [
    {
      "label": "查询关键词",
      "prop": "field_3",
    },
    {
      "label": "级别",
      "prop": "level",
    },
    {
      "label": "日期范围",
      "prop": "field_4",
    },
    {
      "label": "时间",
      "prop": "time",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入查询关键词",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "查询关键词",
      "prop": "field_3",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择级别",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "级别",
      "prop": "level",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入日期范围",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "日期范围",
      "prop": "field_4",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "timerange",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入时间",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "timePicker",
      "label": "时间",
      "prop": "time",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "查询关键词",
      "prop": "field_3",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formtype": "Select",
      "label": "级别",
      "prop": "level",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formtype": "datePicker",
      "label": "日期范围",
      "prop": "field_4",
      "span": 8,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 用户管理 1`] = `
{
  "actions": [
    "add",
    "edit",
    "delete",
  ],
  "columns": [
    {
      "label": "姓名",
      "prop": "name",
    },
    {
      "label": "手机号",
      "prop": "phone",
    },
    {
      "label": "状态",
      "prop": "status",
    },
    {
      "label": "邮箱",
      "prop": "email",
    },
    {
      "label": "创建时间",
      "prop": "createTime",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入姓名",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "姓名",
      "prop": "name",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入手机号",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "手机号",
      "prop": "phone",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入邮箱",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "邮箱",
      "prop": "email",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入创建时间",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "创建时间",
      "prop": "createTime",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "姓名",
      "prop": "name",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "手机号",
      "prop": "phone",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 系统配置 1`] = `
{
  "actions": [
    "add",
    "edit",
    "delete",
    "export",
  ],
  "columns": [
    {
      "label": "名称",
      "prop": "name",
    },
    {
      "label": "类型",
      "prop": "type",
    },
    {
      "label": "编号",
      "prop": "code",
    },
    {
      "label": "描述",
      "prop": "description",
    },
    {
      "label": "状态",
      "prop": "status",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入名称",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "名称",
      "prop": "name",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择类型",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "类型",
      "prop": "type",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入编号",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "编号",
      "prop": "code",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "rows": 3,
        "type": "textarea",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入描述",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "描述",
      "prop": "description",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "名称",
      "prop": "name",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "类型A",
          "value": "A",
        },
        {
          "label": "类型B",
          "value": "B",
        },
        {
          "label": "类型C",
          "value": "C",
        },
      ],
      "formtype": "Select",
      "label": "类型",
      "prop": "type",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 角色权限 1`] = `
{
  "actions": [
    "add",
    "edit",
    "delete",
  ],
  "columns": [
    {
      "label": "角色名称",
      "prop": "field_7",
    },
    {
      "label": "状态",
      "prop": "status",
    },
    {
      "label": "描述",
      "prop": "description",
    },
    {
      "label": "创建时间",
      "prop": "createTime",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入角色名称",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "角色名称",
      "prop": "field_7",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "rows": 3,
        "type": "textarea",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入描述",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "描述",
      "prop": "description",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入创建时间",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "创建时间",
      "prop": "createTime",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "角色名称",
      "prop": "field_7",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable schema for: 订单列表 1`] = `
{
  "actions": [
    "delete",
    "view",
  ],
  "columns": [
    {
      "label": "订单号",
      "prop": "orderNo",
    },
    {
      "label": "客户名称",
      "prop": "customerName",
    },
    {
      "label": "日期范围",
      "prop": "field_1",
    },
    {
      "label": "状态",
      "prop": "status",
    },
    {
      "label": "客户",
      "prop": "customer",
    },
    {
      "label": "金额",
      "prop": "amount",
    },
    {
      "label": "创建时间",
      "prop": "createTime",
    },
  ],
  "dialogFormItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入订单号",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "订单号",
      "prop": "orderNo",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入客户名称",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "客户名称",
      "prop": "customerName",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入日期范围",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "日期范围",
      "prop": "field_1",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formItemOptions": {
        "rules": [
          {
            "message": "请选择状态",
            "required": true,
            "trigger": "change",
          },
        ],
      },
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入客户",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "客户",
      "prop": "customer",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入金额",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "Input",
      "label": "金额",
      "prop": "amount",
      "span": 24,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formItemOptions": {
        "rules": [
          {
            "message": "请输入创建时间",
            "required": true,
            "trigger": "blur",
          },
        ],
      },
      "formtype": "datePicker",
      "label": "创建时间",
      "prop": "createTime",
      "span": 24,
    },
  ],
  "formItems": [
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "订单号",
      "prop": "orderNo",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "formtype": "Input",
      "label": "客户名称",
      "prop": "customerName",
      "span": 6,
    },
    {
      "attrs": {
        "clearable": true,
        "type": "daterange",
        "valueFormat": "YYYY-MM-DD",
      },
      "formtype": "datePicker",
      "label": "日期范围",
      "prop": "field_1",
      "span": 8,
    },
    {
      "attrs": {
        "clearable": true,
      },
      "dataOptions": [
        {
          "label": "启用",
          "value": 1,
        },
        {
          "label": "禁用",
          "value": 0,
        },
      ],
      "formtype": "Select",
      "label": "状态",
      "prop": "status",
      "span": 6,
    },
  ],
  "pagination": {
    "pageSize": 10,
  },
  "tableOptions": {
    "apiParams": {
      "url": "/api/xxx",
    },
    "border": true,
    "headerCellStyle": {
      "background": "#f5f7fa",
    },
    "highlightCurrentRow": true,
    "rowkey": "id",
    "stripe": true,
  },
}
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 员工花名册 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 商品管理 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 文章管理 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 日志查询 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 用户管理 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 系统配置 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 角色权限 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;

exports[`generateCrudSchema — snapshot tests > generates stable wrapper SFC for: 订单列表 1`] = `
"<template>
  <es-crud-page
    ref="crudRef"
    :schema="pageSchema"
    :http-request="fetchData"
    @delete="handleDelete"
    @btn-click="handleBtnClick"
  />
</template>

<script setup>
import { ref } from 'vue'
import { ElMessageBox, ElMessage, ElTag } from 'element-plus'
import { pageSchema } from './schema'

const crudRef = ref(null)

async function fetchData(params) {
  // TODO: 替换为实际接口调用
  // const { data } = await axios.get('/api/list', { params: params.formParams })
  // return data
}

function handleDelete(row) {
  ElMessageBox.confirm('确定删除该条数据吗？', '提示', { type: 'warning' })
    .then(async () => {
      // TODO: 调用删除接口
      ElMessage.success('删除成功')
      crudRef.value?.refresh()
    })
    .catch(() => {})
}

function handleBtnClick(key, data) {
  if (key === 'add-confirm') {
    // TODO: 调用新增接口
    crudRef.value?.refresh()
  }
  if (key === 'edit-confirm') {
    // TODO: 调用编辑接口
    crudRef.value?.refresh()
  }
}
</script>"
`;
